--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 
     <title>Hello, world!</title>
     <style>
@@ -71,7 +80,7 @@
     tempora, officia vitae totam atque aspernatur adipisci sequi pariatur ad, officiis labore libero? Aspernatur
     minima aut, pariatur repellat reprehenderit consequatur, veniam iure hic porro totam, molestias officia.</p>
 
-<h2>Open Positions</h2>
+<h2>Job Openings</h2>
 <div class="container">
     {% for job in jobs %}
         <div class="row job-openings border-bottom">
@@ -81,7 +90,7 @@
                 <div><b>Salary:</b> {{job['salary']}}</div>
             </div>
             <div class="col-md-3 col-12 apply"> <!-- Use col-12 for mobile -->
-                <button type="button" class="btn btn-primary">Apply</button>
+                <a href="mailto:job_applications@aspirecareers.com?subject=Application for the role of {{job['title']}}" type="button" class="btn btn-primary">Apply</a>
             </div>
         </div>
     {% endfor %}
@@ -91,17 +100,5 @@
 <footer class="bg-dark text-light text-center py-2"> <!-- Adjusted footer height -->
     <p>&copy; 2023 Kanishk Munot</p>
 </footer>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
 </body>
 </html>
