--- a/templates/nav.html
+++ b/templates/nav.html
@@ -11,10 +11,10 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Jobs</a>
+                    <a class="nav-link" href="#jobs">Jobs</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
